--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="description" content="Android on web made with React" />
+
+  <meta name="og:title" property="og:title" content="Android in React" />
+  <meta name="og:description" property="og:description" content="Android on web made with React" />
+  <meta name="og:color" content="#303030" />
 
   <title>Android in React</title>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
 </head>
 
 <body>
